<resources>
    <string name="app_name">RssWidget</string>
    <string name="post_title">Mega News</string>
    <string name="post_text">Something happened!!!</string>
    <string name="ok_button_text">OK</string>
    <string name="settings_button_text">Settings</string>
    <string name="prev_button_text">Prev</string>
    <string name="next_button_text">Next</string>

    <string name="rss_url">http://www.gol.bg/rss.php?last</string>
    <string name="default_text">Новините се зареждат&#8230;</string>
    <string name="loaded_text">Новини от Gol.bg</string>
    <string name="rss_unavailable_title">В момента новините не са достъпни</string>
    <string name="rss_unavailable_description">Възможно е да нямате интернет връзка или сайтът да е офлайн.</string>
    <string name="rss_unavailable_date">За контакти: davidov.i@gmail.com</string>
    <string name="author_title">Иван Давидов - софтуерен инженер</string>
    <string name="author_description">Посетете профила на Иван Давидов в професионалната мрежа LinkedIn</string>
    <string name="author_date">За контакти: davidov.i@gmail.com</string>
    <string name="author_url">http://bg.linkedin.com/in/ivandavidov</string>
    <color name="background">#F0F0F0</color>
    <color name="stroke">#808080</color>
    <color name="text">#181A6E</color>
</resources>
