<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <Button
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_next"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:text="@string/next_button_text"
        android:textSize="3pt"/>

    <Button
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_prev"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:text="@string/prev_button_text"
        android:textSize="3pt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_button"
        android:text="@string/settings_button_text"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textSize="3pt"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/post_title"
        android:textColor="#000"
        android:textSize="11sp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/setting_button"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">
    </TextView>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/post_text"
        android:textColor="#000"
        android:textSize="9sp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/title"
        android:paddingTop="8dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">
    </TextView>
</RelativeLayout>